@@ -353,7 +353,7 @@ WxCasFrame::OnBarSave ( wxCommandEvent& WXUNUSED( event ) )
 		_( "Save Statistics Image" ),
 		wxFileName::GetHomeDir (),
 		WxCasCte::AMULESIG_IMG_NAME,
-		wxT("PNG (*.png)|*.png|JPEG (*.jpg)|*.jpg|BMP (*.bmp)|*.bmp|"),
+		wxT("PNG (*.png)|*.png|JPEG (*.jpg)|*.jpg|BMP (*.bmp)|*.bmp"),
 		wxFD_SAVE);
 
 	selectSaveFile.ShowModal();
@@ -411,10 +411,7 @@ void
 WxCasFrame::OnBarAbout ( wxCommandEvent& WXUNUSED( event ) )
 {
 	wxMessageBox ( _
-	               ( "wxCas, aMule OnLine Signature Statistics\n\n"
-	                 "(c) 2004 ThePolish <thepolish@vipmail.ru>\n\n"
-	                 "Based on CAS by Pedro de Oliveira <falso@rdk.homeip.net>\n\n"
-	                 "Distributed under GPL" ),
+	               ( "wxCas, aMule OnLine Signature Statistics\n\n(c) 2004 ThePolish <thepolish@vipmail.ru>\n\nBased on CAS by Pedro de Oliveira <falso@rdk.homeip.net>\n\nDistributed under GPL" ),
 	               _( "About wxCas" ), wxOK | wxCENTRE | wxICON_INFORMATION );
 }
 
@@ -428,10 +425,8 @@ WxCasFrame::OnRefreshTimer ( wxTimerEvent& WXUNUSED( event ) )
 	UpdateAll ();
 
 	// Generate stat image if asked in config
-	if ( ( bool )
-	        ( prefs->
-	          Read ( WxCasCte::ENABLE_AUTOSTATIMG_KEY,
-	                 WxCasCte::DEFAULT_AUTOSTATIMG_ISENABLED ) ) ) {
+	if (prefs->Read( WxCasCte::ENABLE_AUTOSTATIMG_KEY,
+	                 WxCasCte::DEFAULT_AUTOSTATIMG_ISENABLED ) ) {
 		wxImage * statImage = GetStatImage ();
 
 		wxFileName fileName ( prefs->
@@ -458,10 +453,10 @@ WxCasFrame::OnFtpUpdateTimer ( wxTimerEvent& WXUNUSED( event ) )
 	wxConfigBase * prefs = wxConfigBase::Get();
 
 	// Image must be autogenerated to be uploaded
-	if ( ( bool ) ( prefs->Read ( WxCasCte::ENABLE_AUTOSTATIMG_KEY,
-	                              WxCasCte::DEFAULT_AUTOSTATIMG_ISENABLED ) ) &&
-	        ( bool ) ( prefs->Read ( WxCasCte::ENABLE_FTP_UPDATE_KEY,
-	                                 WxCasCte::DEFAULT_FTP_UPDATE_ISENABLED ) ) ) {
+	if ( prefs->Read ( WxCasCte::ENABLE_AUTOSTATIMG_KEY,
+	                   WxCasCte::DEFAULT_AUTOSTATIMG_ISENABLED )
+		 && prefs->Read ( WxCasCte::ENABLE_FTP_UPDATE_KEY,
+	                      WxCasCte::DEFAULT_FTP_UPDATE_ISENABLED ) ) {
 		// Get image file
 		wxFileName fileName ( prefs->
 		                      Read ( WxCasCte::AUTOSTATIMG_DIR_KEY,
